--- a/src/ui/styles/NewInstance.css
+++ b/src/ui/styles/NewInstance.css
@@ -45,15 +45,19 @@
     z-index: 10;
     color: var(--text-color-secondary);
     transition: all 0.3s ease-in-out;
-    width: 50%;
-    text-align: center;
+    width: 100%;
     font-size: 1.5rem;
     pointer-events: none;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .flavour-icon svg {
     stroke-width: 0.9;
     aspect-ratio: 1 / 1;
+    width: 50%;
+
 }
 
 .flavour .custom path {
